login and registration page polished

--- a/QuestionTime/templates/django_registration/registration_form.html
+++ b/QuestionTime/templates/django_registration/registration_form.html
@@ -12,5 +12,9 @@
       Create Account
     </button>
   </form>
+  <p class="mt-2">
+    Alreadyv have an account?
+    <a href="{% url 'login' %}">Login</a>
+  </p>
 </div>
 {% endblock content %}
