--- a/QuestionTime/templates/auth_layout.html
+++ b/QuestionTime/templates/auth_layout.html
@@ -13,7 +13,27 @@
       crossorigin="anonymous"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
+      html,
+      body {
+        font-family: "Playfair Display", serif;
+      }
+
+      .auth-box {
+        border: 1px solid lightgray;
+        border-radious: 10px;
+        padding: 25px 0;
+        width: 600px;
+        margin: auto;
+      }
+
       .login-form-container {
         width: 300px;
         margin: auto;
@@ -23,9 +43,19 @@
         width: 400px;
         margin: auto;
       }
+
+      .form-group {
+        padding: 0.5rem;
+      }
+
+      .outer-area {
+        margin-top: 100px;
+      }
     </style>
   </head>
   <body>
-    <div class="auth-box">{% block content %} {% endblock content %}</div>
+    <div class="outer-area auth-box text-center">
+      {% block content %} {% endblock content %}
+    </div>
   </body>
 </html>
