--- a/QuestionTime/templates/registration/login.html
+++ b/QuestionTime/templates/registration/login.html
@@ -4,11 +4,16 @@
 <!---->
 {% block content %}
 <!---->
-<h1>Login</h1>
+<h1>Question Time</h1>
+<p class="lead text-muted">Login Into Your Account</p>
 <div class="login-form-container">
   <form method="POST">
     {% csrf_token %} {{ form | crispy }}
     <button type="submit" class="btn btn-sm btn-outline-primary">Login</button>
   </form>
+  <p class="mt-2">
+    Don't have an account?
+    <a href="{% url 'django_registration_register' %}">Register</a>
+  </p>
 </div>
 {% endblock content %}
